# claude-history

./: .gitignore  README.md  bootstrap.py  clean.py  embed.py  mcp_server.py  pyproject.toml  search.py  setup.py
.claude-plugin/: plugin.json
agents/: search-history.md
docs/plans/: 2026-04-16-claude-history-cleaner.md  2026-04-16-design-doc-en.md
hooks/: hooks.json
